--- a/skillball.html
+++ b/skillball.html
@@ -147,7 +147,59 @@
                 transform: rotate(calc(var(--gradient-angle) + 360deg));
             }
         }
+
+        /* Slick Slider */
+        .slider-container {
+            width: 85%;
+            height: fit-content;
+            max-width: 480px;
+            /* 모바일 뷰라면 적당한 값으로 */
+            margin: 0 auto;
+            padding-bottom: 1px;
+            background: #eee;
+        }
+
+        .slick-slide {
+            text-align: center;
+            /* 카드형 레이아웃에 맞게 내부 스타일링 */
+        }
+
+        .slide-item {
+            aspect-ratio: 16 / 9;
+            width: 100%;
+            max-width: 480px;
+            /* 필요하다면 최대 너비 제한 */
+            background-color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            cursor: pointer;
+        }
+
+        /* Slick 기본 화살표 커스터마이징 예시 */
+        .slick-prev:before,
+        .slick-next:before {
+            content: none !important;
+            /* 기본 화살표 가상 요소 제거 */
+        }
+
+        /* 필요 시 dots(인디케이터) 커스터마이징 */
+        .slick-dots li {
+            margin: 0 2px !important;
+        }
+
+        .slick-dots li.slick-active button:before {
+            color: #ff005e !important;
+        }
     </style>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
@@ -165,6 +217,22 @@
                 CSS</p>
             <div class="inner-content">
                 <div class='title-line'></div>
+                <div class="slider-container">
+                    <!-- slick slider -->
+                    <div class="slider">
+                        <div class="slide-item" style="background-image: url(./src/img/id_pic.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing2.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing3.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing4.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing5.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing6.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing7.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing8.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing9.jpg)"></div>
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing10.jpg)">
+                        </div>
+                    </div>
+                </div>
                 <p class='skill-summary'>
                     영진직업전문학교에서 진행한 프론트엔드 과정을
                     수료하였으며, 이후 퍼블리셔로 취업하여
@@ -275,6 +343,27 @@
         </div>
     </div>
 
+    <!-- Slick Slider -->
+    <script>
+        $(document).ready(function () {
+            $(".slider").slick({
+                slidesToShow: 1,   // 한 번에 보여줄 슬라이드 개수
+                slidesToScroll: 1, // 한 번에 넘길 슬라이드 개수
+                arrows: true,      // 좌우 화살표 표시 여부
+                dots: true,        // 하단 도트 네비게이션 표시 여부
+                infinite: true,    // 무한 반복 여부
+                autoplay: true,    // 자동 재생 여부
+                autoplaySpeed: 3000, // 자동 재생 속도 (3초)
+                adaptiveHeight: true // 슬라이드 높이 자동 조정
+            });
+
+            // Slick Slider 내부에서 발생한 클릭 이벤트는 .ball 이벤트로 전달되지 않도록 차단
+            $(".slider-container").on("click", function (event) {
+                event.stopPropagation();
+            });
+        });
+    </script>
+
     <script src="./js/AestheticFluidBg.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
@@ -285,7 +374,7 @@
         const bgBox = document.getElementById("bg-box");
         const colorbg = new Color4Bg.AestheticFluidBg({
             dom: "bg-box",
-            colors: ["#ffffff", "#f0f0f0", "#ebebeb", "#e8e8e8", "#d4d4d4", "#cfcfce"],
+            colors: ["#121212", "#000000", "#000000", "#000000", "#000000", "#121212"],
             loop: true,
         });
         requestAnimationFrame(() => {
