--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,8 @@
                 </div>
             </div>
             <div id='footer-copyright'>
-                <p class='t-white'>ⓒ Copyright <b>Sooyeon Kim</b></p>
+                <p class='t-white'>ⓒ Copyright <b>Sooyeon Kim</b> <span
+                        style='margin-left: 4px; font-weight: 200;'>v0.0.1</span></p>
             </div>
         </footer>
         <div class="fullscreen-image">
