--- a/skillball.html
+++ b/skillball.html
@@ -14,6 +14,20 @@
             font-style: normal;
         }
 
+        @font-face {
+            font-family: "GmarketSansL";
+            src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff") format("woff");
+            font-weight: 300;
+            font-style: normal;
+        }
+
+        @font-face {
+            font-family: "GmarketSansB";
+            src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff") format("woff");
+            font-weight: 700;
+            font-style: normal;
+        }
+
         html,
         body {
             width: 100%;
@@ -99,17 +113,18 @@
         }
 
         .ball .inner-content {
-            width: 80%;
+            width: 80vh;
             max-height: 0;
             overflow: hidden;
-            transition: max-height 2s ease;
+            transition: max-height 0.4s ease;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            line-height: 150%;
         }
 
         .ball.expanded .inner-content {
-            max-height: 100vh;
+            max-height: 75vh;
         }
 
         #screen {
@@ -153,7 +168,7 @@
         .slider-container {
             width: 85%;
             max-width: 800px;
-            height: auto;
+            height: 100%;
             aspect-ratio: 16 / 9;
             /* 모바일 뷰라면 적당한 값으로 */
             margin: 0 auto;
@@ -164,12 +179,13 @@
 
         .slick-slide {
             text-align: center;
+            max-height: auto;
             /* 카드형 레이아웃에 맞게 내부 스타일링 */
         }
 
         .slide-item {
-            aspect-ratio: 16 / 9;
             width: 100%;
+            aspect-ratio: 16 / 9;
             /* 필요하다면 최대 너비 제한 */
             background-color: #fff;
             display: flex;
@@ -220,10 +236,10 @@
                 CSS</p>
             <div class="inner-content">
                 <div class='title-line'></div>
-                <div class="slider-container">
-                    <!-- slick slider -->
-                    <div class="slider">
-                        <div class="slide-item" style="background-image: url(./src/img/id_pic.jpg)"></div>
+                <!-- <div class="slider-container"> -->
+                <!-- slick slider -->
+                <!--<div class="slider">
+                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing1.jpg)"></div>
                         <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing2.jpg)"></div>
                         <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing3.jpg)"></div>
                         <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing4.jpg)"></div>
@@ -235,7 +251,7 @@
                         <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing10.jpg)">
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <p class='skill-summary'>
                     영진직업전문학교에서 진행한 프론트엔드 과정을
                     수료하였으며, 이후 퍼블리셔로 취업하여
@@ -269,9 +285,9 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    SBS게임아카데미에서 진행한 레벨 디자이너 과정을
-                    이수하였으며, Blueprint를 이용해 게임 속
-                    동작을 구현하는 기초를 다졌습니다.
+                    영진직업전문학교에서 진행한 프론트엔드 과정을
+                    수료하였으며, React를 이용한 웹 퍼블리싱이
+                    가능하고 간단한 API를 연결할 수 있습니다.
                 </p>
                 <p class='skill-comment'>Use : Unreal5</p>
             </div>
@@ -283,9 +299,9 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    영진직업전문학교에서 진행한 프론트엔드 과정을
-                    수료하였으며, React를 이용한 웹 퍼블리싱이
-                    가능하고 간단한 API를 연결할 수 있습니다.
+                    SBS게임아카데미에서 진행한 레벨 디자이너 과정을
+                    이수하였으며, Blueprint를 이용해 게임 속
+                    동작을 구현하는 기초를 다졌습니다.
                 </p>
                 <p class='skill-comment'>
                     Use : VScode, 카페24
@@ -307,6 +323,7 @@
                 <p class='skill-comment'>Use : Adobe XD(80%), Figma(60%)</p>
             </div>
         </div>
+        <!-- (2) 프로모션 디자인 -->
         <div class="ball design-skill"
             style="--gradient-angle: 80deg; --ball-gradient: linear-gradient(80deg, rgba(220,255,0,1), rgba(220,255,0,0));">
             <p class='skill-name'>프로모션<br>
@@ -320,6 +337,7 @@
                 <p class='skill-comment'></p>
             </div>
         </div>
+        <!-- (3) 이미지 편집 -->
         <div class="ball design-skill"
             style="--gradient-angle: 80deg; --ball-gradient: linear-gradient(80deg, rgba(220,255,0,1), rgba(220,255,0,0));">
             <p class='skill-name'>이미지<br>
@@ -332,18 +350,63 @@
                 <p class='skill-comment'>Use : Adobe Photoshop(80%), etc…</p>
             </div>
         </div>
+        <!-- (4) 드로잉 -->
         <div class="ball design-skill"
             style="--gradient-angle: 80deg; --ball-gradient: linear-gradient(80deg, rgba(220,255,0,1), rgba(220,255,0,0));">
             <p class='skill-name'>드로잉</p>
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    어릴 때부터 고등학생 때까지 미술을 공부하여
-                    각종 일러스트, 스토리보드 등
+                    어릴 때부터 고등학생 때까지 미술을 공부했으며
+                    예술고등학교 애니메이션과를 졸업했습니다.<br>
+                    각종 일러스트 제작, 스토리보드 작성 등
                     자유로운 드로잉이 가능합니다.</p>
                 <p class='skill-comment'>Use : Hand(90%), Digital(70%)</p>
             </div>
         </div>
+
+        <!-- ✅ 기타 스킬 -->
+        <!-- (1) 문서 작성 및 관리 -->
+        <div class="ball other-skill"
+            style="--gradient-angle: 80deg; --ball-gradient: linear-gradient(80deg, rgba(221,221,221,1), rgba(221,221,221,0));">
+            <p class='skill-name'>문서작성<br>
+                및 관리</p>
+            <div class="inner-content">
+                <div class='title-line'></div>
+                <p class='skill-summary'>
+                    보고서, 제안서, 기획서 등
+                    다양한 양식을 필요에 따라 제작 가능하며
+                    지속적인 버전 관리 및 데이터 추출이 가능합니다.</p>
+                <p class='skill-comment'>Use : Google SpreadSheet(70%),
+                    PowerPoint(70%), Excel(50%)</p>
+            </div>
+        </div>
+        <!-- (2) 공예 -->
+        <div class="ball other-skill"
+            style="--gradient-angle: 120deg; --ball-gradient: linear-gradient(120deg, rgba(221,221,221,1), rgba(221,221,221,0));">
+            <p class='skill-name'>수공예</p>
+            <div class="inner-content">
+                <div class='title-line'></div>
+                <p class='skill-summary'>
+                    조향, 화과자, 캔들, 천연 화장품 등 다양한 수공예 수업을
+                    이수하여 민간 강사 자격증을 취득하였으며
+                    자격증 교육이 가능합니다</p>
+                <p class='skill-comment'>Level : Intermediate(중수)</p>
+            </div>
+        </div>
+        <!-- (3) 3D 프린팅 -->
+        <!-- <div class="ball other-skill"
+            style="--gradient-angle: 80deg; --ball-gradient: linear-gradient(80deg, rgba(221,221,221,1), rgba(221,221,221,0));">
+            <p class='skill-name'>3D<br>프린팅</p>
+            <div class="inner-content">
+                <div class='title-line'></div>
+                <p class='skill-summary'>
+                    3D프린터운용기능사 국가기술자격
+                    필기 통과하였으며 실기 시험을 앞두고 있습니다.</p>
+                <p class='skill-comment'>Use : Google SpreadSheet(70%),
+                    PowerPoint(70%), Excel(50%)</p>
+            </div>
+        </div> -->
     </div>
 
     <!-- Slick Slider -->
