--- a/index.html
+++ b/index.html
@@ -1003,9 +1003,13 @@
                 <!-- 희망사항 - 캐릭터 대화 End -->
                 <!-- 희망사항 - 희망 내용 -->
                 <div id='desires-summary' style='background-color: white;'>
-                    <h2 class='t-pink'>Job Dsires</h2>
+                    <h2 class='t-pink'>Job Preference</h2>
                     <table>
                         <tbody>
+                            <tr>
+                                <td>희망직종</td>
+                                <td>웹 퍼블리셔 <span>혹은</span> UI/UX 디자이너</td>
+                            </tr>
                             <tr>
                                 <td>근무형태</td>
                                 <td>정규직 <span>혹은</span> 프리랜서</td>
@@ -1120,7 +1124,7 @@
             </div>
             <div id='footer-copyright'>
                 <p class='t-white'>ⓒ Copyright <b>Sooyeon Kim</b> <span id='version'
-                        style='margin-left: 4px; font-weight: 200;'>v1.0.2</span></p>
+                        style='margin-left: 4px; font-weight: 200;'>v1.0.4</span></p>
             </div>
         </footer>
         <div class="fullscreen-image">
