--- a/index.html
+++ b/index.html
@@ -1084,14 +1084,14 @@
                     <p id='footer-contact-t02'>최대한 빠르게 확인 후 답변 드리겠습니다.</p>
                     <div id='footer-contact-another-bt-wrapper'>
                         <a id='footer-bt-kakakotalk' title="카카오톡 오픈채팅" href="https://open.kakao.com/o/s7VoKahh">
-                            <svg width="auto" height="15px" viewBox="0 0 512 512" version="1.1">
+                            <svg width="100%" height="15px" viewBox="0 0 512 512" version="1.1">
                                 <path fill="#fff"
                                     d="M255.5 48C299.345 48 339.897 56.5332 377.156 73.5996C414.415 90.666 443.871 113.873 465.522 143.22C487.174 172.566 498 204.577 498 239.252C498 273.926 487.174 305.982 465.522 335.42C443.871 364.857 414.46 388.109 377.291 405.175C340.122 422.241 299.525 430.775 255.5 430.775C241.607 430.775 227.262 429.781 212.467 427.795C148.233 472.402 114.042 494.977 109.892 495.518C107.907 496.241 106.012 496.15 104.208 495.248C103.486 494.706 102.945 493.983 102.584 493.08C102.223 492.177 102.043 491.365 102.043 490.642V489.559C103.126 482.515 111.335 453.169 126.672 401.518C91.8486 384.181 64.1974 361.2 43.7185 332.575C23.2395 303.951 13 272.843 13 239.252C13 204.577 23.8259 172.566 45.4777 143.22C67.1295 113.873 96.5849 90.666 133.844 73.5996C171.103 56.5332 211.655 48 255.5 48Z">
                                 </path>
                             </svg>
                         </a>
                         <a id='footer-bt-call' title="기본 전화 프로그램으로 연결" href="tel:+8250219392082">
-                            <svg width="auto" height="13px" viewBox="0 0 15 15">
+                            <svg width="100%" height="13px" viewBox="0 0 15 15">
                                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                     <g transform="translate(-103.000000, -7321.000000)" fill="#ffffff">
                                         <g transform="translate(56.000000, 160.000000)">
@@ -1124,7 +1124,7 @@
             </div>
             <div id='footer-copyright'>
                 <p class='t-white'>ⓒ Copyright <b>Sooyeon Kim</b> <span id='version'
-                        style='margin-left: 4px; font-weight: 200;'>v1.0.4</span></p>
+                        style='margin-left: 4px; font-weight: 200;'>v1.0.5</span></p>
             </div>
         </footer>
         <div class="fullscreen-image">
@@ -1134,98 +1134,7 @@
 </body>
 
 <!-- color4Bg-->
-<script>
-    (() => {
-        const parentId = "pr-chara-canvas-wrapper";
-
-        // 부모 요소의 크기를 미디어 쿼리 조건(이상)으로 설정
-        const ensureParentSize = () => {
-            const parent = document.getElementById(parentId);
-            if (!parent) return;
-
-            let newWidth, newHeight;
-            if (window.matchMedia("(min-width: 768px)").matches) {
-                newWidth = "1080px";
-                newHeight = "908px";
-            } else {
-                newWidth = "552px";
-                newHeight = "460px";
-            }
-
-            if (parent.style.width !== newWidth || parent.style.height !== newHeight) {
-                parent.style.width = newWidth;
-                parent.style.height = newHeight;
-            }
-        };
-
-        // 부모 요소의 자식 요소와 color4Bg 스크립트 삭제
-        const cleanup = () => {
-            const parent = document.getElementById(parentId);
-            if (parent) {
-                while (parent.firstChild) parent.removeChild(parent.firstChild);
-            }
-            const script = document.getElementById("triangles-lib");
-            if (script) {
-                script.remove();
-                delete window.Color4Bg;
-            }
-        };
-
-        // color4Bg 스크립트를 동적으로 로드 후 콜백 실행
-        const loadLib = (cb) => {
-            const s = document.createElement("script");
-            s.id = "triangles-lib";
-            s.src = "./js/TrianglesMosaicBg.min.js";
-            s.onload = () => cb();
-            document.head.appendChild(s);
-        };
-
-        // 기존 canvas를 삭제하고 부모 크기를 되돌린 다음 라이브러리 로드 및 canvas 생성 후 scale 적용
-        const initCanvas = () => {
-            const parent = document.getElementById(parentId);
-            if (parent) parent.style.transform = "none"; // transform 제거하여 실제 크기를 유지
-            cleanup();
-            ensureParentSize();
-            loadLib(() => {
-                new Color4Bg.TrianglesMosaicBg({
-                    dom: parentId,
-                    colors: ["#ffffff", "#f0f0f0", "#ebebeb", "#e8e8e8", "#d4d4d4", "#cfcfce"],
-                    seed: 84874,
-                    loop: "true"
-                });
-                gsap.fromTo("#colorbgcanvas",
-                    { opacity: 0 }, // 초기: 숨김 상태
-                    {
-                        opacity: 1, duration: 0.2, ease: "power2.out",
-                        scrollTrigger: {
-                            trigger: "#colorbgcanvas", // 트리거 요소
-                            once: true // 한 번만 실행
-                        },
-                    });
-                if (parent) {
-                    parent.style.transform = "scale(0.5)";
-                    parent.style.transformOrigin = "top left";
-                }
-            });
-        };
-
-        // 페이지 로드 시 canvas 초기화
-        document.addEventListener("DOMContentLoaded", () => {
-            initCanvas();
-        });
-
-        // 리사이즈 시 transform 제거 후 canvas 재생성
-        window.addEventListener("resize", () => {
-            const parent = document.getElementById(parentId);
-            if (parent) parent.style.transform = "none";
-            cleanup();
-            clearTimeout(window.resizeTimer);
-            window.resizeTimer = setTimeout(() => {
-                initCanvas();
-            }, 100);
-        });
-    })();
-</script>
+<script src='./js/IndexColor4Bg.js'></script>
 
 <!-- GSAP  -->
 <script>
