--- a/index.html
+++ b/index.html
@@ -173,7 +173,13 @@
                     <div id="pr-chara-bg-wrapper">
                         <div id="pr-chara-fillter"></div>
                         <div id="pr-chara-bg">
-                            <div id='pr-chara-canvas-wrapper' data-pixelate="true">
+                            <div id='pr-chara-bg-video-wraaper' data-pixelate="true">
+                                <video id='pr-chara-bg-video' autoplay muted playsinline loop>
+                                    <source src="./src/videos/prBg-large.webm" type="video/webm">
+                                    <source src="./src/videos/prBg-large.mp4" type="video/mp4">
+                                    브라우저가 비디오 포맷을 지원하지 않습니다.
+                                    Your browser does not support the video tag.
+                                </video>
                             </div>
                         </div>
                     </div>
@@ -1029,7 +1035,7 @@
                             </tr>
                             <tr>
                                 <td>희망조건</td>
-                                <td><span>출근 시</span> 유연근무제, 탄력근무제, 중식 제공</td>
+                                <td><span>출근 시</span> 유연근무제, 탄력근무제, 식대 제공</td>
                             </tr>
                             <tr>
                                 <td>근무지역</td>
@@ -1134,7 +1140,7 @@
             </div>
             <div id='footer-copyright'>
                 <p class='t-white'>ⓒ Copyright <b>Sooyeon Kim</b> <span id='version'
-                        style='margin-left: 4px; font-weight: 200;'>v1.0.6 resizeEventTest_2</span></p>
+                        style='margin-left: 4px; font-weight: 200;'>v1.0.6 resizeEventTest_3</span></p>
             </div>
         </footer>
         <div class="fullscreen-image">
@@ -1144,12 +1150,26 @@
 </body>
 
 <!-- color4Bg-->
-<script src='./js/IndexColor4Bg.js'></script>
+<!-- <script src='./js/IndexColor4Bg.js'></script> -->
 
 <!-- GSAP  -->
 <script>
     gsap.registerPlugin(ScrollTrigger);
 
+    //자기 PR 동영상 부메랑 루프
+    const video = document.getElementById("pr-chara-bg-video");
+
+    video.onloadedmetadata = function () {
+        // 첫 등장 시 페이드 인 효과 (opacity: 0 → 1)
+        gsap.to(video, {
+            opacity: 1,
+            duration: 0.6, // 페이드 인 효과 지속 시간 (원하는 값으로 조절)
+            ease: "power1.out",
+        });
+    };
+
+
+    // 자기PR 말풍선 나타내기
     const elements = gsap.utils.toArray([".pr-bubble", "#pr-chara-img-wrapper"]);
     gsap.fromTo(elements,
         { y: 60, opacity: 0 },
@@ -1163,7 +1183,7 @@
         }
     );
 
-    // 말풍선과 함께 인트로 캐릭터 나타내기
+    // 말풍선과 함께 자기PR 인트로 캐릭터 나타내기
     gsap.fromTo("#pr-chara-bubble",
         { scale: 0 }, // 초기 상태
         {
