--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
             </div>
             <div id='footer-copyright'>
                 <p class='t-white'>ⓒ Copyright <b>Sooyeon Kim</b> <span id='version'
-                        style='margin-left: 4px; font-weight: 200;'>v1.0.6 resizeEventTest_3</span></p>
+                        style='margin-left: 4px; font-weight: 200;'>v1.0.7</span></p>
             </div>
         </footer>
         <div class="fullscreen-image">
