--- a/index.html
+++ b/index.html
@@ -1125,13 +1125,9 @@
                         <g id="contact" transform="translate(0 0.299)">
                             <path id="merge" d="M28,43.256H56V62Zm-28,0H28L0,62Zm0,0V0H56V43.256Z"
                                 transform="translate(0 -0.299)" fill="#ff005e" />
-                            <text id="Contact-2" data-name="Contact" transform="translate(7 26.701)" fill="#fff"
-                                font-size="11" font-family="Pretendard, Montserrat-SemiBold, Montserrat"
-                                font-weight="600" ;>
-                                <tspan x="0" y="0">Contact</tspan>
-                            </text>
                         </g>
                     </svg>
+                    <p class='t-white'>Contact</p>
                 </div>
                 <div id='footer-chara-wrapper'>
                     <img id='footer-chara' src='./src/img/chara-contact.png' oncontextmenu="return false;"
@@ -1140,7 +1136,7 @@
             </div>
             <div id='footer-copyright'>
                 <p class='t-white'>ⓒ Copyright <b>Sooyeon Kim</b> <span id='version'
-                        style='margin-left: 4px; font-weight: 200;'>v1.0.7</span></p>
+                        style='margin-left: 4px; font-weight: 200;'>v1.0.8</span></p>
             </div>
         </footer>
         <div class="fullscreen-image">
@@ -1156,11 +1152,10 @@
 <script>
     gsap.registerPlugin(ScrollTrigger);
 
-    //자기 PR 동영상 부메랑 루프
+    //자기 PR 동영상 나타내기
     const video = document.getElementById("pr-chara-bg-video");
 
     video.onloadedmetadata = function () {
-        // 첫 등장 시 페이드 인 효과 (opacity: 0 → 1)
         gsap.to(video, {
             opacity: 1,
             duration: 0.6, // 페이드 인 효과 지속 시간 (원하는 값으로 조절)
@@ -1183,7 +1178,7 @@
         }
     );
 
-    // 말풍선과 함께 자기PR 인트로 캐릭터 나타내기
+    // 자기PR 인트로 캐릭터 나타내기
     gsap.fromTo("#pr-chara-bubble",
         { scale: 0 }, // 초기 상태
         {
