--- a/skillball.html
+++ b/skillball.html
@@ -35,6 +35,7 @@
             padding: 0;
             margin: 0;
             box-sizing: border-box;
+            border: none;
         }
 
         /* 배경 박스 */
