--- a/skillball.html
+++ b/skillball.html
@@ -389,9 +389,9 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    조향, 화과자, 캔들, 천연 화장품 등 다양한 수공예 수업을
+                    화장품, 캔들, 조향, 화과자 등 다양한 수공예 수업을
                     이수하여 민간 강사 자격증을 취득하였으며
-                    자격증 교육이 가능합니다</p>
+                    자격증 교육이 가능합니다.</p>
                 <p class='skill-comment'>Level : Intermediate(중수)</p>
             </div>
         </div>
