Update job preference

--- a/index.html
+++ b/index.html
@@ -1032,11 +1032,15 @@
                             </tr>
                             <tr>
                                 <td>필수조건</td>
-                                <td>재택근무 <span>혹은</span> 반려동물 동반출근</td>
+                                <td>식대제공, 자유로운 연차사용</td>
                             </tr>
                             <tr>
                                 <td>희망조건</td>
-                                <td><span>출근 시</span> 유연근무제, 탄력근무제, 식대 제공</td>
+                                <td>유연근무제 <span>혹은</span> 탄력근무제</td>
+                            </tr>
+                            <tr>
+                                <td>희망급여</td>
+                                <td>3,200만원 이상</td>
                             </tr>
                             <tr>
                                 <td>근무지역</td>
@@ -1045,7 +1049,7 @@
                         </tbody>
                     </table>
                     <div id='desires-message'>
-                        <p>현재 개인 사정으로 가능한 재택근무 일감을 찾고 있습니다. 신뢰와 책임감으로 근무하겠습니다!⚡</p>
+                        <p>믿고 맡겨주시면 준비된 자세와 남다른 책임감으로 성실히 근무하겠습니다!⚡</p>
                     </div>
                 </div>
                 <!-- 희망사항 - 희망 내용 End -->
