Open (주)웨스트윙 경력기술서 section

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             <!-- ✅ 웨스트윙 -->
                             <div class='portfolio-wrapper'>
                                 <p class='portfolio-title'><span>(주)웨스트윙 경력기술서 - 웹 퍼블리셔</span></p>
-                                <div class='portfolio-section-wrapper'>
+                                <div class='portfolio-section-wrapper open'>
                                     <!-- 슬라이더 -->
                                     <div class='portfolio-section'>
                                         <div class="slider-container">
